# house_price_prediction_pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
house_prices_prediction_pipeline/: __init__.py  _config.py  inference.py  preprocess.py  train.py
house_prices_prediction_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
